<resources>
    <string name="app_name">How not to get divorced?</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_alarms">Reminders</string>
    <string name="menu_new_alarm">Create new reminder</string>
    <string name="menu_tasks">Tasks</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="name">Name</string>
    <string name="adjust_discrete_slider">Set percent change of firing</string>
    <string name="adjust_continuous_slider">Set expected number of firing per day</string>
    <string name="continuous">Continuous</string>
    <string name="discrete">Discrete</string>
    <string name="mon">Monday</string>
    <string name="tue">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="thu">Thursday</string>
    <string name="fri">Friday</string>
    <string name="sat">Saturday</string>
    <string name="sun">Sunday</string>
    <string name="include_weekends">Include weekends</string>
    <string name="show_weekdays">Show weekdays</string>
    <string name="hide_weekdays">Hide weekdays</string>
    <string name="per_day">per day</string>
    <string name="reminder_type">Reminder type</string>
    <string name="category">Category</string>
    <string name="add_new_reminder">Add new reminder</string>
    <string name="menu_edit_alarm">Edit alarm</string>
    <string name="edit_reminder">Edit alarm</string>
    <string name="delete_edit_alarm">Delete alarm</string>
    <string name="cancel">Cancel</string>
    <string name="time_of_alarms">Time of alarms</string>
    <string name="time_of_completion">Time of completion</string>
    <string name="alarms_per_day">Alarms per day</string>
    <string name="global_statistics">Global statistics</string>
    <string name="statistics">Statistics</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>