<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_alarms"
            android:icon="@drawable/alarm_icon"
            android:title="@string/menu_alarms" />
        <item
            android:id="@+id/nav_new_alarm"
            android:icon="@drawable/add_alarm_icon"
            android:title="@string/menu_new_alarm" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/statistics_icon"
            android:title="@string/menu_statistics" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings_icon"
            android:title="@string/action_settings" />
    </group>
</menu>