<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_alarms">

    <fragment
        android:id="@+id/nav_alarms"
        android:name="com.example.how_not_to_get_divorced.ui.alarms.AlarmsFragment"
        android:label="@string/menu_alarms"
        tools:layout="@layout/fragment_alarms" />

    <fragment
        android:id="@+id/nav_new_alarm"
        android:name="com.example.how_not_to_get_divorced.ui.new_alarm.NewAlarmFragment"
        android:label="@string/menu_new_alarm"
        tools:layout="@layout/fragment_new_alarm" >
        <action
            android:id="@+id/action_nav_new_alarm_to_nav_alarms"
            app:destination="@id/nav_alarms" />
    </fragment>

    <fragment
        android:id="@+id/nav_statistics"
        android:name="com.example.how_not_to_get_divorced.ui.statistics.StatisticsFragment"
        android:label="@string/menu_statistics"
        tools:layout="@layout/fragment_statistics" >
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.how_not_to_get_divorced.SettingsFragment"
        android:label="@string/action_settings" />
</navigation>