<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.new_alarm.NewAlarmFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:id="@+id/alarmsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/menu_new_alarm"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:textSize="32sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_alarm_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:layout_marginStart="12sp"
        android:textSize="18sp"
        />

    <Spinner
        android:id="@+id/new_alarm_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reminder_type"
        android:textSize="18sp"
        android:layout_marginStart="12sp"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/slider_new_alarm_tabs"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/slider_new_alarm_pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8sp" />
    <Button
        android:id="@+id/new_alarm_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new_reminder"
        android:layout_margin="8sp" />

    </LinearLayout>
</ScrollView>