<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.alarm_statistics.AlarmStatistics">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="160sp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/stats_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/statText"
                android:layout_width="wrap_content"
                android:layout_height="43dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/statistics"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30sp">

            <TextView
                android:id="@+id/text_time_of_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/time_of_alarms" />

            <com.example.how_not_to_get_divorced.view.Histogram
                android:id="@+id/hist_time_of_day"
                android:layout_width="wrap_content"
                android:layout_height="300sp"
                app:color="@color/purple_200" />

            <TextView
                android:id="@+id/text_time_of_success"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:paddingTop="8sp"
                android:text="@string/time_of_alarms" />

            <com.example.how_not_to_get_divorced.view.Histogram
                android:id="@+id/hist_time_of_success"
                android:layout_width="wrap_content"
                android:layout_height="300sp"
                app:color="@color/dark_green" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:paddingTop="8sp"
                android:text="@string/time_of_completion" />

            <com.example.how_not_to_get_divorced.view.Histogram
                android:id="@+id/hist_time_to_completion"
                android:layout_width="wrap_content"
                android:layout_height="300sp"
                app:color="@color/blue" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:paddingTop="8sp"
                android:text="@string/alarms_per_day" />

            <com.example.how_not_to_get_divorced.view.Histogram
                android:id="@+id/hist_alarms_per_day"
                android:layout_width="wrap_content"
                android:layout_height="300sp"
                app:color="@color/orange"
                app:histogramStep="1.0" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>